--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 5.188.0.226, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 198.57.27.225, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇯🇵 日本-16.83MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 167.88.61.50, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 167.88.61.50, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-760.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-233.0KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 5.188.0.226, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 5.188.0.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 5.188.0.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
       - 🇯🇵 日本-16.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
       - 🇯🇵 日本-16.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
       - 🇯🇵 日本-16.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
       - 🇯🇵 日本-16.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
       - 🇯🇵 日本-16.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
       - 🇯🇵 日本-16.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
       - 🇯🇵 日本-16.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
