--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 5.188.0.226, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.50MB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 5.188.0.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-440.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 167.88.61.50, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-3.24MB/s(Youtube:不良林), server: 198.57.27.225, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-559.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20729, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 5.188.0.226, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 198.57.27.225, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 5.188.0.226, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 5.188.0.226, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: 5.188.0.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,50 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
