--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 167.88.61.50, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-3.24MB/s(Youtube:不良林), server: 198.57.27.225, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-559.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20729, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 5.188.0.226, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 198.57.27.225, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 5.188.0.226, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇭🇰 香港-233.0KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 198.57.27.225, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: 5.188.0.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 198.57.27.225, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-320.5KB/s(Youtube:不良林), server: sg01.czsx1624.tk, port: 443, type: vmess, uuid: d002b422-eace-4e01-bf58-e4bb0bcfe7af, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /3a8545177/, ws-headers: {Host: sg01.czsx1624.tk}}
+  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-422.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-516.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20743, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
